# safe-app-grove

./: .mcp.json  SECURITY_AUDIT.md  grove_db.py  pyproject.toml  safe-app-manifest.json  safe_integration.py
.github/workflows/: tests.yml
bridge/: __init__.py  __main__.py  app.py  matrix.py  registration.yaml  store.py
grove/: __main__.py  app.py  mcp_auth.py  mcp_local.py  mcp_server.py  server.py
tests/: test_grove_db.py
u2u/: consent.py  contacts.py  dispatcher.py  identity.py  listener.py  packets.py  sender.py
