[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-app-grove"
version = "0.1.0"
description = "Sovereign workspace messaging where every conversation grows into knowledge."
requires-python = ">=3.10"
dependencies = [
    "textual>=0.61.0",
    "psycopg2-binary>=2.9.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
    "uvicorn>=0.30.0",
]
